# shop-mvp

./: .env.example  .gitignore  AI-RULES.md  ARCHITECTURE.md  CYBERGHOST-BUG-REPORT.md  Cargo.toml  ENV-AUDIT.md  INCIDENT-RESPONSE.md  PHILOSOPHY.md  SPEC-CURL.md  STANDARDS.md  TESTABIL-CU-CURL.md  TODO.md  TRUST-BOUNDARY.md  compose.yml  dev-mark-paid.sh  dev-test.sh  hop-mvp  package-lock.json  run-dev.sh  start.sh  test-behavior.sh  test-curl.sh  tty sane
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: security.yml
articles/: arhitectura-completa-ecosistem-shop-mvp-myapp.md  arhitectura-dual-project-myapp-shop-mvp.md  arhitectura-filosofie-standarde-securitate-mai-putine-buguri.md  arhitectura-lego-hotpath.md  arhitectura-zero-js.md  bucla-infinita-de-redirect-care-nu-era-javascript.md  ce-este-enterprise.md  cod-cu-si-fara-standarde.md  cross-compilare.md  debugging-infinite-redirect-loop.md  filosofia-hn-server-side.md  frontend-debugging-journey.md  hot-path.md  manual-academic-arhitectura-securitate-inginerie.md  manual-arhitectura-securitate-mai-putine-buguri.md  manual-evergreen-arhitectura-web.md  mold-sccache-advanced.md  pgvector-android-termux.md  prg-pattern-impl.md  securitate-informatica.md  standard-cis-controls.md  standard-eidas.md  standard-gdpr-web.md  standard-iso-27001.md  standard-nist-csf.md  standard-owasp-api-top-10.md  standard-owasp-asvs-level-2.md  standard-pci-dss.md  standard-psd2-sca.md  standard-wcag-21.md  strategie-securitate-nivele.md  ubuntu-dev-optimizare.md  webassembly-prod.md
docs/: cart.md
libs/cache/: Cargo.toml
libs/cache/src/: error.rs  lib.rs  pg.rs
libs/rust-auth/: Cargo.toml
libs/rust-auth/src/: lib.rs  models.rs  pg.rs
libs/rust-cart/: Cargo.toml
libs/rust-cart/src/: lib.rs  models.rs  pg.rs
libs/rust-input-types/: Cargo.toml
libs/rust-input-types/src/: currency.rs  email.rs  error.rs  id_types.rs  lib.rs  parser.rs  phone.rs  price.rs  quantity.rs  slug.rs  text.rs
libs/rust-knowledge-base/: Cargo.toml
libs/rust-knowledge-base/src/: lib.rs  models.rs  pg.rs
libs/rust-logic/: Cargo.toml
libs/rust-logic/src/: lib.rs
libs/rust-marketplace-categories/: Cargo.toml
libs/rust-marketplace-categories/src/: lib.rs  models.rs  pg.rs
libs/rust-marketplace-listings/: Cargo.toml
libs/rust-marketplace-listings/src/: lib.rs  models.rs  pg.rs
libs/rust-marketplace-orders/: Cargo.toml
libs/rust-marketplace-orders/src/: lib.rs  models.rs  pg.rs
libs/rust-marketplace-products/: Cargo.toml
libs/rust-marketplace-products/src/: lib.rs  models.rs  pg.rs
libs/rust-path-prefix/: Cargo.toml
libs/rust-path-prefix/src/: lib.rs
libs/rust-payment/: Cargo.toml
libs/rust-payment/src/: lib.rs  mock.rs  models.rs  retry.rs  stripe.rs
libs/rust-ratelimit/: Cargo.toml
libs/rust-ratelimit/src/: lib.rs
libs/rust-slug/: Cargo.toml
libs/rust-slug/src/: lib.rs
libs/rust-trust-boundary/: Cargo.toml
libs/rust-trust-boundary/src/: boundary.rs  lib.rs  safe_body.rs  safe_cookies.rs  safe_headers.rs  safe_path.rs  safe_request.rs  safe_response.rs
libs/rust-url-normalizer/: Cargo.toml
libs/rust-url-normalizer/src/: encode.rs  lib.rs
libs/rust-wallet/: Cargo.toml
libs/rust-wallet/src/: lib.rs  models.rs  pg.rs
libs/storage/: Cargo.toml
libs/storage/src/: error.rs  lib.rs  local.rs
libs/u32-i32-converter/: Cargo.toml  README.md
libs/u32-i32-converter/examples/: demo.rs
libs/u32-i32-converter/src/: lib.rs
scripts/: backup-db.sh  secrets.sh  seed-articles.py  seed-articles.sh  seed-remote.py
shop-mvp/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.local  README.md  cloudbuild.yaml
shop-mvp/migrations/: 001_shop_schema.sql  002_cart_items_unique.sql
shop-mvp/src/: boundary.rs  cookie.rs  debug.rs  front_controller.rs  http.rs  main.rs  payment_retry.rs  ratelimit.rs  render.rs  startup.rs  state.rs  trust_boundary.rs
shop-mvp/src/handlers/: admin.rs  auth.rs  cart.rs  mod.rs  orders.rs  products.rs
shop-mvp/src/types/: currency.rs  email.rs  error.rs  extractor.rs  id_types.rs  logic.rs  mod.rs  output.rs  parser.rs  phone.rs  price.rs  quantity.rs  slug.rs  text.rs
shop-mvp/static/: style.css  tsconfig.json
shop-mvp/static/.well-known/: security.txt
shop-mvp/templates/: index.html
shop-mvp/templates-js-archive/: admin_logs.html  admin_orders.html  admin_product_form.html  admin_products.html  base.html  cart.html  checkout.html  index.html  login.html  orders.html  product_detail.html  products.html  search.html  signup.html  success.html
shop-mvp/templates/admin/: admin_logs.html  admin_orders.html  admin_product_form.html  admin_products.html
shop-mvp/templates/auth/: login.html  me.html  privacy.html  security.html  signup.html
shop-mvp/templates/cart/: cart.html
shop-mvp/templates/layout/: base.html  page.html
shop-mvp/templates/orders/: checkout.html  orders.html  success.html
shop-mvp/templates/products/: product_detail.html  products.html  search.html
shop-mvp/tests/: README.md  package-lock.json  package.json  playwright.config.ts  shop.spec.ts
