[package]
name = "shop-mvp"
version = "0.1.0"
edition = "2024"
description = "🛒 MVP Marketplace — doar autentificare, produse și coș"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "macros"] }
http = "1.0"
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "fs"] }
tokio = { version = "1.52", features = ["full"] }

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Templating
tera = { version = "2", features = ["glob_fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Config
dotenvy = "0.15"
anyhow = { version = "1.0", features = ["backtrace"] }

# Async
async-trait = "0.1"

# Crypto (Stripe webhook signature verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# ========================================
# LEGO-uri 🧱
# ========================================
rust-marketplace-products  = { path = "../libs/rust-marketplace-products" }
rust-marketplace-categories = { path = "../libs/rust-marketplace-categories", features = ["products"] }
rust-auth                = { path = "../libs/rust-auth" }
rust-cart                = { path = "../libs/rust-cart" }
rust-marketplace-orders  = { path = "../libs/rust-marketplace-orders" }
rust-payment            = { path = "../libs/rust-payment" }
rust-url-normalizer     = { path = "../libs/rust-url-normalizer" }
rust-slug                = { path = "../libs/rust-slug" }
rust-trust-boundary     = { path = "../libs/rust-trust-boundary" }
rust-ratelimit          = { path = "../libs/rust-ratelimit" }
rust-logic              = { path = "../libs/rust-logic" }
rust-input-types        = { path = "../libs/rust-input-types" }
