[package]
name = "rust-auth"
version = "0.1.0"
edition = "2024"
description = "Authentication: users, password hashing, JWT sessions — standalone LEGO"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# LEGO adapters — (fără rust-marketplace-listings; dependența inversă eliminată)
