[package]
name = "rust-cart"
version = "0.1.0"
edition = "2024"
description = "Shopping cart: add/remove items, quantities, server-side persistence — standalone LEGO module"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true
