[package]
name = "rust-marketplace-categories"
version = "0.1.0"
edition = "2024"
description = "Hierarchical category tree with PostgreSQL — standalone LEGO module"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true

# LEGO: când activăm "products", categories poate fi folosit ca CategoryService
rust-marketplace-products = { path = "../rust-marketplace-products", optional = true }

[features]
default = []
products = ["rust-marketplace-products"]
