[package]
name = "rust-marketplace-orders"
version = "0.1.0"
edition = "2024"
description = "Orders & checkout: place orders, manage status, order history — standalone LEGO module"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true
