[package]
name = "rust-marketplace-products"
version = "0.1.0"
edition = "2024"
description = "Product catalog with brand filtering — standalone LEGO module"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
