[package]
name = "rust-payment"
version = "0.1.0"
edition = "2024"
description = "Payment processing: Stripe, card payments — standalone LEGO module"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio.workspace = true
tracing.workspace = true
