[package]
name = "rust-trust-boundary"
version = "0.2.0"
edition = "2024"
description = "TrustBoundary — UNICA graniță dintre aplicație și lumea exterioară. Tot inputul e validat, tot outputul e sanitizat. Parse, don't validate."
license = "MIT OR Apache-2.0"

[dependencies]
http = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2"
