[package]
name = "rust-url-normalizer"
version = "0.1.0"
edition = "2024"
description = "Axum middleware that normalizes URLs: strips trailing slash with 301 redirect, preserves query params — standalone LEGO module"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.8"
tower = "0.5"
http = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
