[package]
name = "rust-wallet"
version = "0.1.0"
edition = "2024"
description = "Digital wallet: balances, transactions, deposits — standalone LEGO"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true

# LEGO adapters
rust-auth = { path = "../rust-auth", optional = true }

[features]
default = []
lego-auth = ["rust-auth"]
