[package]
name = "storage"
version = "0.1.0"
edition = "2024"
description = "Universal file storage trait (local / GCS / S3)"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1.52.3", features = ["fs"] }
uuid = { version = "1.23.4", features = ["v4"] }
